<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:title="Mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/network_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/network_enabled"
                    android:src="@drawable/rounded_wifi_24"
                    app:tint="@color/red" />
                <ImageView
                    android:id="@+id/gps_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/gps_enabled"
                    android:src="@drawable/rounded_globe_location_pin_24"
                    app:tint="@color/red" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/best_provider_text"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/najlepszy_dostawca" />

                <TextView
                    android:id="@+id/longitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/latitude_text"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/latitude" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <org.osmdroid.views.MapView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/map_view" />

    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/archival_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zapis_lokalizacji" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>