<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:title="Pogoda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/lokalizacja"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/description_text"
        android:layout_margin="10dp"
        android:contentDescription="@string/weather_description" />

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="62sp" />

    <TextView
        android:id="@+id/description_text"
        android:text="@string/ladowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/temperature_text"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/feels_like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temperature_text"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textAlignment="center" />

</RelativeLayout>